maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit) {
    keepHandOnSIde()
  }
  prendBiscuit()
  
  
}
def  keepHandOnSideWall() {
  gauche()
  while (estFaceMur) {
    droite()
  }
  avance()
}